--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
 
-/* Your CSS Code here. */
+.inner{
+	width:300px;
+	height:150px;
+	background-color:lightblue;
+	padding:50px;
+	border:50px solid blue;
+	margin:20px;
+}
