--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 
 .inner{
-	width:300px;
-	height:150px;
+	width:400px;
+	height:200px;
 	background-color:lightblue;
 	padding:50px;
-	border:50px solid blue;
+	border:15px solid blue;
 	margin:20px;
+}
+.content{
+	width:300px:
 }
